<resources>
    <string name="app_name">MedicalFridge</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fridges">Холодильники</string>
    <string name="statistic">Статистика</string>
    <string name="profile">Профіль</string>
    <string name="login">вхід</string>
    <string name="registration">регистрация</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="number_of_chamber">№ Камери: %s</string>
    <string name="temperature_in_chamber">Температура: %s</string>
    <string name="humidity_in_chamber">Влажность: %s</string>
    <string name="state_of_chamber_is_ok">Состояние камеры: ОК</string>
    <string name="state_of_chamber_is_fail">Состояние камеры: ПРОБЛЕМЫ</string>
    <string name="add_chamber">Добавить камеру</string>
    <string name="name_of_medication">Название медикамента: %s</string>
    <string name="amount">Количество: %s</string>
    <string name="date_of_create">Дата изготовления: %s</string>
    <string name="date_of_expiration">Пригоден до: %s</string>
    <string name="price">Цена: %s</string>
    <string name="status_ok">Состояние: ПРИГОДЕН</string>
    <string name="status_fail">Состояние: НЕПРИГОДЕН</string>
    <string name="min_temperature">Минимальная температура хранения: %s</string>
    <string name="max_temperature">Максимальная температура хранения: %s</string>
    <string name="delete">удалить</string>
    <string name="done">готово</string>
    <string name="name_organization">Name organization</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
</resources>
